[MOD] JDK 17 → 21