@@ -20,7 +20,7 @@ public final class RESTDelete {
     System.out.println("=== DELETE: delete a document or database ===");
 
     // The java URL connection to the resource
-    URL url = new URL("http://admin:admin@localhost:8080/rest/factbook/input.xml");
+    URL url = URI.create("http://admin:admin@localhost:8080/rest/factbook/input.xml").toURL();
     System.out.println("\n* URL: " + url);
 
     // Establish the connection to the URL
@@ -33,7 +33,7 @@ public final class RESTDelete {
         " (" + conn.getResponseMessage() + ')');
 
     // The java URL connection to the resource
-    url = new URL("http://admin:admin@localhost:8080/rest/factbook");
+    url = URI.create("http://admin:admin@localhost:8080/rest/factbook").toURL();
     System.out.println("\n* URL: " + url);
 
     // Establish the connection to the URL
